Added Title and Meta Descriptions for Inspectra

--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/inspectra-logo-primary-sm.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Inspectra // Get property at ease</title>
+    <meta
+      name="description"
+      content="Inspectra helps you find properties to buy or rent. Connect with verified realtors, schedule inspections, and more."
+    />
+    <title>
+      Inspectra - Buy, Rent & List Properties with Verified Realtors
+    </title>
   </head>
   <body>
     <div id="root"></div>
